# mingw-w64-study

./: .gitignore  README.md
helloworld_console/: Makefile.am  Makefile.in  configure  configure.ac  helloworld.c
helloworld_d3d11/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  helloworld_d3d11.cpp  shaders.hlsl  vs.fxo
helloworld_dlg/: Makefile.am  Makefile.in  configure  configure.ac  helloworld_dlg.c
helloworld_glut/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  helloworld_glut.c
helloworld_glut/lib/: freeglut.lib
helloworld_opengl/: CMakeLists.txt  Makefile.am  Makefile.in  config.h.in  configure  configure.ac
helloworld_opengl/src/: CMakeLists.txt  Makefile.am  Makefile.in  cameraclass.cpp  cameraclass.h  colorshaderclass.cpp  colorshaderclass.h  config.h  graphicsclass.cpp  graphicsclass.h  modelclass.cpp  modelclass.h  openglclass.cpp  openglclass.h  systemclass.cpp  systemclass.h
helloworld_sdl2/: Makefile.am  Makefile.in  configure  configure.ac  helloworld_sdl2.cpp
helloworld_sdl2-opengl/: Makefile.am  Makefile.in  autogen.sh  configure  configure.ac  helloworld_sdl2-opengl.cpp
helloworld_win/: Makefile.am  Makefile.in  configure  configure.ac  helloworld_win.c
